--- a/Style/style.css
+++ b/Style/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: HelveticaNeue;
-    src: local("HelveticaNeue"), url(Fonts/HelveticaNeueCE35Thin.ttf); 
+    src: local("HelveticaNeue"), url(../Fonts/HelveticaNeueCE35Thin.ttf); 
 }
 @font-face {
     font-family: HelveticaBold;
-    src: local("HelveticaBold"), url(Fonts/HelveticaNeueCE75Bold.ttf); 
+    src: local("HelveticaBold"), url(../Fonts/HelveticaNeueCE75Bold.ttf); 
 }
 
 body
@@ -56,6 +56,24 @@ div.addModelTitle
 	-moz-transition: all 0.5s ease-in-out;
 	-o-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
+}
+
+#content
+{
+	position: absolute;
+	left: 0.5em;
+	right: 0.5em;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+
+div.emptyData
+{
+	font-size: 18pt;
+	color: white;
+	text-align: center;
 }
 
 input {
