--- a/Style/style.css
+++ b/Style/style.css
@@ -104,6 +104,7 @@ input[type="button"]
 	padding-top: 6px;
 }
 
+
 #addPanelButton
 {
 	width: 48.9%;
@@ -113,6 +114,14 @@ input[type="text"]
 {
 	width: 99%;
 	border: 1px solid #CCC;
+}
+input:focus
+{
+	border-color: green;
+}
+input[type="number"]:focus
+{
+	border-color: green;
 }
 
 input[type="number"] 
